@@ -9,6 +9,8 @@ CHANGES IN CUPS V1.4.7
 	  STR #3755, STR #3769, STR #3783)
 	- Configure script fixes (STR #3659, STR #3691)
 	- Compilation fixes (STR #3718, STR #3771, STR #3774)
+	- The scheduler might leave old job data files in the spool directory
+	  (STR #3795)
 	- CUPS did not work with locales using the ASCII character set
 	  (STR #3832)
 	- httpAddrString() did not return a URI-style IPv6 numeric address
